--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ dependencies {
 	compile "com.miglayout:miglayout-swing:4.1"
 	compile "org.yaml:snakeyaml:1.11"
 	compile "org.swinglabs:swingx:1.0"
-	compile "de.schlichtherle.truezip:truezip-driver-zip:7.7.6"
+	compile "de.schlichtherle.truezip:truezip-samples:+"
     compile "org.apache.commons:commons-lang3:3.1"
     compile "org.springframework:spring:+"
     compile "it.sauronsoftware.cron4j:cron4j:2.2.5"
